fix:the input with all white space gives error message to user

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -144,3 +144,16 @@ table {
 .is-hidden {
   display: none;
 }
+
+
+.err-msg {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  color: red;
+
+}
+
+/* .err-back {
+  background-color: red; */
+/* } */
